feat(US-5): implementar bloqueio e desbloqueio de tarefas e configurar CORS